@@ -4,6 +4,9 @@ have made contributions:
 Eric Moore <Eric dot Moore at lsi dot com> help with mptctl
         interface [20061129]
 
+Hannes Reinecke <hare at suse dot de>
+	mpt3sas support [20130925]
+
 Luben Tuikov <ltuikov at yahoo dot com> 'smp_discover --multiple' format
 	and various other suggestions and testing [20060801]
 
