@@ -30,6 +30,8 @@ bin_PROGRAMS = \
 # for C++ testing
 ## CC = g++ -std=c++11
 ## CC = g++
+## CC = clang
+## CC = clang++
 
 # -std=<s> can be c99, c11, gnu11, etc. Default is gnu89 (gnu90 is the same)
 AM_CFLAGS = -I ../include -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wall -W
